--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/HttpRoutingAssertionDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/HttpRoutingAssertionDialog.properties
@@ -68,3 +68,12 @@ response.msgDest.label.text = Response message destination:
 response.msgDest.default.text = Default response
 response.msgDest.variable.text = Save as context variable:
 response.msgDest.variable.tooltip = Name of context variable to save as
+cipherSuitesButton.label=C&ipher Suites
+tlsVersionsLabel.text=TLS V&ersion:
+tlsPanelBorderTitle.text=SSL / TLS
+
+tls-protocol.any=<Any>
+tls-protocol.SSLv3=SSL 3.0
+tls-protocol.TLSv1=TLS 1.0
+tls-protocol.TLSv1.1=TLS 1.1
+tls-protocol.TLSv1.2=TLS 1.2
