SSG-4570: Fix for Internal CSR service should not use hard coded expiry of two years
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27948 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -940,6 +940,10 @@ pkixOCSP.useNonce.description = Include a nonce in OCSP requests (true/false)
 pkixOCSP.useNonce.default = true
 pkixOCSP.useNonce.clusterProperty = pkix.ocsp.useNonce
 
+pkix.csr.defaultExpiryAge.description = The default certificate expiry to use for issued user certificates (days)
+pkix.csr.defaultExpiryAge.default = 730
+pkix.csr.defaultExpiryAge.clusterProperty = pkix.csr.defaultExpiryAge
+
 keyStoreDefaultSslKey.description = Keystore ID and alias of default SSL key, colon delimited.  A keystore ID of -1 means "unspecified".
 keyStoreDefaultSslKey.default = -1:SSL
 keyStoreDefaultSslKey.clusterProperty = keyStore.defaultSsl.alias
