initial check-in of the internal identity provider enhancements includes - identity provider password policy entity - force password reset - password policy enforcement
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27954 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/NewUserDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/NewUserDialog.properties
@@ -57,5 +57,6 @@ helpButton.mnemonic=H
 forceChangePassword.label=Force Password Change:
 forceChangePassword.tooltip=Force the user to change their password upon login.
 
+passwordRulesButton.label=Password Rules
 
 
