--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1320,6 +1320,11 @@ security.fips.enabled.clusterProperty=security.fips.enabled
 security.fips.enabled.systemProperty=com.l7tech.security.fips.enabled
 security.fips.enabled.setSystemProperty=true
 
+security.pcidss.enabled.description= Enable PCI-DSS. (true/false)
+security.pcidss.enabled.default= false
+security.pcidss.enabled.clusterProperty=security.pcidss.enabled
+security.pcidss.enabled.visible=true
+
 jdbcQuery.maxRecords.defaultValue.description=Default maximum number of records allowed to return from querying (records; default 10)
 jdbcQuery.maxRecords.defaultValue.default=10
 jdbcQuery.maxRecords.defaultValue.clusterProperty=jdbcQuery.maxRecords.defaultValue
