--- a/modules/identity/src/main/resources/com/l7tech/EntityTypes.properties
+++ b/modules/identity/src/main/resources/com/l7tech/EntityTypes.properties
@@ -4,3 +4,4 @@ GROUP=com.l7tech.identity.Group
 MAP_ATTRIBUTE=com.l7tech.identity.mapping.AttributeConfig
 MAP_IDENTITY=com.l7tech.identity.mapping.IdentityMapping
 MAP_TOKEN=com.l7tech.identity.mapping.SecurityTokenMapping
+PASSWORD_POLICY=com.l7tech.identity.IdentityProviderPasswordPolicy
