ug EM-673: Fix for Page title for policy migration history is incorrect
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27957 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/EsmStandardWebPage.properties
+++ b/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/EsmStandardWebPage.properties
@@ -33,7 +33,7 @@ page.Login.title = Log In
 page.Logs.title = Logs
 page.Monitor.title = Monitor
 page.PolicyMigration.title = Policy Migration
-page.PolicyMapping.title = Policy Mapping  
+page.PolicyMapping.title = Policy History
 page.Setup.title = Setup
 page.StandardReports.title = Standard Reports
 page.SystemSettings.title = System Settings
