Use JSR 330 annotations (Inject,Named) instead of Resource and SpringBean annotations.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27958 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/processcontroller/ivy.xml
+++ b/modules/gateway/processcontroller/ivy.xml
@@ -31,6 +31,8 @@
         <dependency org="com.l7tech.lib" name="apache-cxf-lib" rev="2.3.3" force="true" conf="core"/>
         <dependency org="com.sun.xml.fastinfoset" name="FastInfoset" rev="1.2.7" force="true" conf="core"/>
 
+        <dependency org="javax.inject" name="javax.inject" rev="1" force="true" conf="core"/>
+
         <dependency org="org.mortbay.jetty" name="jetty" rev="6.1.26" force="true" conf="core"/>
         <dependency org="org.mortbay.jetty" name="jetty-util" rev="6.1.26" force="true" conf="core"/>
 
