SSG-4564: Fix for Increase default value of com.l7tech.server.admin.ws.requestSizeLimit and expose as CWP
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27962 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1123,6 +1123,11 @@ admin.certificateDiscoveryEnabled.description=Enabling certificate discovery all
 admin.certificateDiscoveryEnabled.default=true
 admin.certificateDiscoveryEnabled.clusterProperty=admin.certificateDiscoveryEnabled
 
+admin.esmRequestSizeLimit.description = The size limit in bytes for ESM administration and Node Control requests, or 0 for unlimited (Integer)
+admin.esmRequestSizeLimit.default = 10485760
+admin.esmRequestSizeLimit.systemProperty = ${propertyPrefix}.admin.ws.requestSizeLimit
+admin.esmRequestSizeLimit.clusterProperty = admin.esmRequestSizeLimit
+
 processControllerPresent.description = Nodes in this cluster are managed processes (true/false).
 processControllerPresent.visible = false
 processControllerPresent.clusterProperty = node.processControllerPresent
