--- a/modules/ems/src/main/resources/com/l7tech/server/ems/resources/emconfig.properties
+++ b/modules/ems/src/main/resources/com/l7tech/server/ems/resources/emconfig.properties
@@ -242,6 +242,13 @@ logon.lockoutTime.description = The time interval that the locked account will h
 logon.lockoutTime.default = 1200
 logon.lockoutTime.clusterProperty = logon.lockoutTime
 
+logon.sessionExpiry.description=The time interval a session can be inactive for.  Default is 15 minutes.  Value should be entered in minutes.
+logon.sessionExpiry.default=15
+logon.sessionExpiry.clusterProperty=logon.sessionExpiry
+
+logon.inactivityPeriod.description=The time interval an administrative user account could be inactive for.  Default is 35 days  Value should be entered in days.
+logon.inactivityPeriod.default=35
+logon.inactivityPeriod.clusterProperty=logon.inactivityPeriod
 #
 # Initial default setting values of alert triggers for system monitoring setup
 #
@@ -426,6 +433,7 @@ password.expiry.description = Number of days until password expires (max 90 days
 password.expiry.default = 90
 password.expiry.clusterProperty = password.expiry
 
-security.stig.enabled.default=true
-security.stig.enabled.systemProperty=${propertyPrefix}.stigEnabled
+security.policyManager.forbidPasswordWhenCertPresent.description = Use certificate to authenticate an administrative user when present. 
+security.policyManager.forbidPasswordWhenCertPresent.default=true
+security.policyManager.forbidPasswordWhenCertPresent.clusterProperty=security.policyManager.forbidPasswordWhenCertPresent
 
