--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1157,12 +1157,21 @@ logon.lockoutTime.description=The time interval that the locked account will hav
 logon.lockoutTime.default=1200
 logon.lockoutTime.clusterProperty=logon.lockoutTime
 
+logon.sessionExpiry.description=The time interval a session can be inactive for.  Default is 15 minutes.  Value should be entered in minutes.
+logon.sessionExpiry.default=15
+logon.sessionExpiry.clusterProperty=logon.sessionExpiry
+
+logon.inactivityPeriod.description=The time interval an administrative user account could be inactive for.  Default is 35 days  Value should be entered in days.
+logon.inactivityPeriod.default=35
+logon.inactivityPeriod.clusterProperty=logon.inactivityPeriod
+
 password.expiry.description=Number of days until password expires (max 90 days).  The default is set to 90 days.
 password.expiry.default=90
 password.expiry.clusterProperty=password.expiry
 
-security.stig.enabled.default=true
-security.stig.enabled.systemProperty=${propertyPrefix}.stigEnabled
+security.policyManager.forbidPasswordWhenCertPresent.description = Use certificate to authenticate when present.
+security.policyManager.forbidPasswordWhenCertPresent.default=true
+security.policyManager.forbidPasswordWhenCertPresent.clusterProperty=security.policyManager.forbidPasswordWhenCertPresent
 
 krb5Keytab.description = Kerberos keytab file data
 krb5Keytab.visible = false
