Implementation of http://sarek/mediawiki/index.php?title=Audit_Message_Filter_Internal_Policy#Audit_level_override It is now possible via cluster properties to modify the level for any audit detail message as well as configuring a list of audits to never audit. Each cluster property audit.setDetailLevel.SEVERE down to .FINEST takes a space separated list of audit codes which must be treated as having the level represented by the cluster property. audit.auditDetailExcludeList is the list of audits never to audit. Added test coverage.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27977 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1374,3 +1374,35 @@ xslDocMaxDownloadSize.clusterProperty = xslDownload.maxSize
 
 otherTextualContentTypes.description=Other textual content types. Default are (text, xml, json and form encoded). Each content type must be on a new line and may include a charset e.g. application/custom; charset="UTF-8" 
 otherTextualContentTypes.clusterProperty = contentType.otherTextualTypes
+
+audit.setDetailLevel.SEVERE.description=Set the audit detail level for all listed audit codes to 'SEVERE'. Space separated list.
+audit.setDetailLevel.SEVERE.clusterProperty=audit.setDetailLevel.SEVERE
+audit.setDetailLevel.SEVERE.visible=false
+
+audit.setDetailLevel.WARNING.description=Set the audit detail level for all listed audit codes to 'WARNING'. Space separated list.
+audit.setDetailLevel.WARNING.clusterProperty=audit.setDetailLevel.WARNING
+audit.setDetailLevel.WARNING.visible=false
+
+audit.setDetailLevel.INFO.description=Set the audit detail level for all listed audit codes to 'INFO'. Space separated list.
+audit.setDetailLevel.INFO.clusterProperty=audit.setDetailLevel.INFO
+audit.setDetailLevel.INFO.visible=false
+
+audit.setDetailLevel.CONFIG.description=Set the audit detail level for all listed audit codes to 'CONFIG'. Space separated list.
+audit.setDetailLevel.CONFIG.clusterProperty=audit.setDetailLevel.CONFIG
+audit.setDetailLevel.CONFIG.visible=false
+
+audit.setDetailLevel.FINE.description=Set the audit detail level for all listed audit codes to 'FINE'. Space separated list.
+audit.setDetailLevel.FINE.clusterProperty=audit.setDetailLevel.FINE
+audit.setDetailLevel.FINE.visible=false
+
+audit.setDetailLevel.FINER.description=Set the audit detail level for all listed audit codes to 'FINER'. Space separated list.
+audit.setDetailLevel.FINER.clusterProperty=audit.setDetailLevel.FINER
+audit.setDetailLevel.FINER.visible=false
+
+audit.setDetailLevel.FINEST.description=Set the audit detail level for all listed audit codes to 'FINEST'. Space separated list.
+audit.setDetailLevel.FINEST.clusterProperty=audit.setDetailLevel.FINEST
+audit.setDetailLevel.FINEST.visible=false
+
+audit.auditDetailExcludeList.description=Set of audit detail messages never to audit. Space separated list.
+audit.auditDetailExcludeList.clusterProperty=audit.auditDetailExcludeList
+audit.auditDetailExcludeList.visible=false
