--- a/modules/ems/ivy.xml
+++ b/modules/ems/ivy.xml
@@ -29,6 +29,7 @@
         <dependency name="layer7-gateway-management" rev="latest.integration" force="true" conf="core->default; test->default,test"/>
         <dependency name="layer7-gateway-server" rev="latest.integration" force="true" conf="core->default; test->default,test"/>
 
+        <dependency org="bouncycastle" name="bcpg-jdk16" rev="1.46" force="true" conf="core"/>
         <dependency org="org.slf4j" name="slf4j-api" rev="1.6.1" force="true" conf="core"/>
         <dependency org="org.slf4j" name="slf4j-jdk14" rev="1.6.1" force="true" conf="core"/>
         <dependency org="org.apache.wicket" name="wicket" rev="1.4.5" force="true" conf="core"/>
@@ -41,7 +42,7 @@
         <dependency org="commons-io" name="commons-io" rev="2.0.1" force="true" conf="core"/>
         <dependency org="org.hibernate" name="hibernate-core" rev="3.6.1.Final" force="true" conf="core"/>
         <dependency org="org.javassist" name="javassist" rev="3.14.0-GA" force="true" conf="core"/>
-        <dependency org="org.apache.derby" name="derby" rev="10.4.1.3" force="true" conf="core"/>
+        <dependency org="org.apache.derby" name="derby" rev="10.7.1.1" force="true" conf="core"/>
         <dependency org="org.mortbay.jetty" name="jetty" rev="6.1.26" force="true" conf="core"/>
         <dependency org="org.mortbay.jetty" name="jetty-util" rev="6.1.26" force="true" conf="core"/>
         <dependency org="org.mortbay.jetty" name="jetty-sslengine" rev="6.1.26" force="true" conf="core"/>
