SSG-4540: Added "Show Password" checkboxes to the HTTP routing assertion's HTTP Basic Password, HTTP Proxy Password, and Microsoft Integrated Password fields.  Introduced gui util Utilities.configureShowPasswordButton() method to easily configure such buttons in the future.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28007 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/HttpRoutingAssertionDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/HttpRoutingAssertionDialog.properties
@@ -77,3 +77,6 @@ tls-protocol.SSLv3=SSL 3.0
 tls-protocol.TLSv1=TLS 1.0
 tls-protocol.TLSv1.1=TLS 1.1
 tls-protocol.TLSv1.2=TLS 1.2
+showPassword.label=&Show Password
+showKrbPasswordCheckBox.label=&Show Password
+showProxyPasswordCheckBox.label=&Show Password
