Updated a couple of cluster property descriptions, changing "SecureSpan Gateway" to "Gateway" and "SecureSpan Manager" to "Policy Manager".
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28026 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -793,12 +793,12 @@ trafficLoggerCount.clusterProperty = trafficlogger.count
 trafficLoggerCount.systemProperty = ${propertyPrefix}.trafficlogger.count
 trafficLoggerCount.visible = false
 
-trafficLoggerRecordReq.description = Append the contents of the request received by the SecureSpan Gateway at the end of each record (true/false)
+trafficLoggerRecordReq.description = Append the contents of the request received by the Gateway at the end of each record (true/false)
 trafficLoggerRecordReq.default = false
 trafficLoggerRecordReq.clusterProperty = trafficlogger.recordreq
 trafficLoggerRecordReq.systemProperty = ${propertyPrefix}.trafficlogger.recordreq
 
-trafficLoggerRecordRes.description = Append the contents of the response returned by the SecureSpan Gateway at the end of each record (true/false)
+trafficLoggerRecordRes.description = Append the contents of the response returned by the Gateway at the end of each record (true/false)
 trafficLoggerRecordRes.default = false
 trafficLoggerRecordRes.clusterProperty = trafficlogger.recordres
 trafficLoggerRecordRes.systemProperty = ${propertyPrefix}.trafficlogger.recordres
@@ -1030,14 +1030,14 @@ soapRejectMustUnderstand.description = If true, SOAP messages containing an unre
 soapRejectMustUnderstand.default = true
 soapRejectMustUnderstand.clusterProperty = soap.rejectMustUnderstand
 
-soap.actors.description = Additional SOAP (1.1) Actors for Security headers that will be processed by the SecureSpan Gateway (space separated list)
+soap.actors.description = Additional SOAP (1.1) Actors for Security headers that will be processed by the Gateway (space separated list)
 soap.actors.default = secure_span\nhttp://www.layer7tech.com/ws/policy
 soap.actors.systemProperty = com.l7tech.xml.soap.actors
 soap.actors.clusterProperty = soap.actors
 soap.actors.getSystemProperty = false
 soap.actors.setSystemProperty = true
 
-soap.roles.description = Additional SOAP (1.2) Roles for Security headers that will be processed by the SecureSpan Gateway (space separated list)
+soap.roles.description = Additional SOAP (1.2) Roles for Security headers that will be processed by the Gateway (space separated list)
 soap.roles.default = secure_span\nhttp://www.layer7tech.com/ws/policy
 soap.roles.systemProperty = com.l7tech.xml.soap.roles
 soap.roles.clusterProperty = soap.roles
@@ -1119,7 +1119,7 @@ services.certificateDiscoveryEnabled.description=Enabling certificate discovery 
 services.certificateDiscoveryEnabled.default=true
 services.certificateDiscoveryEnabled.clusterProperty=services.certificateDiscoveryEnabled
 
-admin.certificateDiscoveryEnabled.description=Enabling certificate discovery allows the SecureSpan Manager to securely discover this Gateway's SSL certificate without user intervention (true/false).
+admin.certificateDiscoveryEnabled.description=Enabling certificate discovery allows the Policy Manager to securely discover this Gateway's SSL certificate without user intervention (true/false).
 admin.certificateDiscoveryEnabled.default=true
 admin.certificateDiscoveryEnabled.clusterProperty=admin.certificateDiscoveryEnabled
 
@@ -1145,7 +1145,7 @@ processControllerExternalPort.clusterProperty = node.processControllerExternalPo
 processControllerExternalPort.systemProperty = ${propertyPrefix}.processControllerExternalPort
 processControllerExternalPort.default = 8765
 
-logon.warningBanner.description=Warning message that will be displayed to the user upon successful login to the SecureSpan Manager. By default, this cluster property is empty, which will result in no warning banner being displayed.
+logon.warningBanner.description=Warning message that will be displayed to the user upon successful login to the Policy Manager. By default, this cluster property is empty, which will result in no warning banner being displayed.
 logon.warningBanner.default=
 logon.warningBanner.clusterProperty=logon.warningBanner
 
