bug 10155: Fix for Debug logging for database connections not available
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28082 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/hibernate_default.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/hibernate_default.properties
@@ -26,6 +26,7 @@ l7.mysql.url.parameter.secondsBeforeRetryMaster = 20
 l7.mysql.url.parameter.queriesBeforeRetryMaster = 2000
 l7.mysql.url.parameter.socketTimeout = 120000
 l7.mysql.url.parameter.connectTimeout = 2000
+l7.mysql.url.parameter.logger = com.mysql.jdbc.log.Jdk14Logger
 l7.mysql.url.parameters.extra =
 l7.mysql.url.parameters = \
   autoReconnect=${l7.mysql.url.parameter.autoReconnect}\
@@ -36,6 +37,7 @@ l7.mysql.url.parameters = \
   &queriesBeforeRetryMaster=${l7.mysql.url.parameter.queriesBeforeRetryMaster}\
   &socketTimeout=${l7.mysql.url.parameter.socketTimeout}\
   &connectTimeout=${l7.mysql.url.parameter.connectTimeout}\
+  &logger=${l7.mysql.url.parameter.logger}\
   ${l7.mysql.url.parameters.extra}
 l7.mysql.connection.url = jdbc:mysql://${l7.mysql.url.${node.db.clusterType}.hosts}/${node.db.config.main.name}?${l7.mysql.url.parameters}
 l7.mysql.connection.driver_class = com.mysql.jdbc.Driver
