--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/system.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/system.properties
@@ -11,6 +11,9 @@ com.sun.jndi.ldap.connect.pool.protocol = plain ssl
 sun.rmi.dgc.client.gcInterval=3600000
 sun.rmi.dgc.server.gcInterval=3600000
 
+# C3P0 logging configuration
+com.mchange.v2.log.MLog=com.mchange.v2.log.jdk14logging.Jdk14MLog
+
 # Layer 7 properties
 com.l7tech.common.http.prov.apache.CommonsHttpClient.maxConnectionsPerHost=750
 com.l7tech.common.http.prov.apache.CommonsHttpClient.maxTotalConnections=7500
