SSM-3212: change error text to "Password character requirements exceed the minimum password length"
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28087 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/IdProviderPasswordPolicyDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/IdProviderPasswordPolicyDialog.properties
@@ -27,7 +27,7 @@ password.length.error=Maximum password length is less then minimum
 repeat.frequency.error=Password repeat frequency must be greater then 0.
 expiry.error=Password expiry must be greater then 0.
 password.max.length.error=Maximum password length must be greater then 0.
-minimum.characters.error=Minimum characters requirements exceeds the maximum allowable password length
+minimum.characters.error=Password character requirements exceed the minimum password length
 
 below.stig.warning=Requirements are below STIG minimum
 below.pcidss.warning=Requirements are below PCI-DSS minimum
