Add auditing for exceptions in administrative methods as per http://sarek/mediawiki/index.php?title=Audit_System_Enhancements#Administrative_Audits . By default the message text from any exception is now audited, there are two new hidden cluster properties that can be used to disable auditing of permission denied events ("audit.adminExceptions.auditPermissionDenied") or exception classes ("audit.adminExceptions.excludes")
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28088 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -347,6 +347,16 @@ audit.originalMainPart.enable.systemProperty = com.l7tech.message.enableOriginal
 audit.originalMainPart.enable.clusterProperty = audit.originalMainPart.enable
 audit.originalMainPart.enable.setSystemProperty = true
 
+audit.adminExceptions.auditPermissionDenied.description = Should permission denials for administrative users be audited (true/false)
+audit.adminExceptions.auditPermissionDenied.default = true
+audit.adminExceptions.auditPermissionDenied.clusterProperty = audit.adminExceptions.auditPermissionDenied
+audit.adminExceptions.auditPermissionDenied.visible = false
+
+audit.adminExceptions.excludes.description = List of exception classes that should be excluded from auditing during administrative calls (space separated list)
+audit.adminExceptions.excludes.default =
+audit.adminExceptions.excludes.clusterProperty = audit.adminExceptions.excludes
+audit.adminExceptions.excludes.visible = false
+
 logBuffer.messageSize.description = Maximum permitted size for unformatted log message (characters)
 logBuffer.messageSize.default = 4096
 logBuffer.messageSize.systemProperty = ${propertyPrefix}.logBuffer.messageSize
