Started work on audit viewer private key.  A key can now optionally be designated as the audit viewer private key.  Currently this designation shows in the SSM UI, and is visible via to Gateway components via the defaultKey bean, but has no other function.
 Collapsed the "Make Default SSL" and "Make Default CA" buttons into a new button that triggers a popup menu.
 
 Changed the key role badge icon in the manage private keys window to flip between different badges, if more than one role is designated for a key.
 
 Commented out some debug text in AdminRemotingProvider.

git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28090 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -965,8 +965,15 @@ keyStoreDefaultCaKey.description = Keystore ID and alias of default CA key, colo
 keyStoreDefaultCaKey.default = -1:CA
 keyStoreDefaultCaKey.clusterProperty = keyStore.defaultCa.alias
 keyStoreDefaultCaKey.systemProperty = ${propertyPrefix}.keyStore.defaultCa.alias
-keyStoreDefaultCaKey.setSystemProeprty = false
+keyStoreDefaultCaKey.setSystemProperty = false
 keyStoreDefaultCaKey.visible = false
+
+keyStoreAuditViewerKey.description = Keystore ID and alias of audit viewer decryption key, colon delimited.  A keystore ID of -1 means "unspecified".
+keyStoreAuditViewerKey.default = -1:AUDITVIEWER
+keyStoreAuditViewerKey.clusterProperty = keyStore.auditViewer.alias
+keyStoreAuditViewerKey.systemProperty = ${propertyPrefix}.keyStore.auditViewer.alias
+keyStoreAuditViewerKey.setSystemProperty = false
+keyStoreAuditViewerKey.visible = false
 
 keyStoreSearchForAlias.description = If a key alias isn't found in the expected keystore, search all other keystores as well (true/false)
 keyStoreSearchForAlias.default = true
