initial implementation of new password storage using new passwordHasher bean. Large changeset and not fully tested. Contains todo items to refactor and to test. ESM is not tested. More work needed. Main changes are: Removed usages of HexUtils.encodePasswd to generated hashedPassword property for InternalUsers. Removed setClearTextPassword from InternalUsers. Callers must be able to set the hashedPassword property. Clients can no longer set hashed passwords or modify any password hash when saving an InternalUser. Added new httpDigest property to return the http digest of the users password, if available. This property is saved or removed on user creation / authentication / reset password based on hidden cluster property httpDigest.enable. Added new authenticateAdministrator method to AuthenticatingIdentityProvider interface. Implementations should only support auth mechanisms supported by the Policy Manager (password or client cert) or ESM (password). Kept support for old password hashes for upgraded users and for password history. There are likely to be regressions in this change set.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28121 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1423,3 +1423,8 @@ audit.setDetailLevel.FINEST.visible=false
 audit.auditDetailExcludeList.description=Set of audit detail messages never to audit. Space separated list.
 audit.auditDetailExcludeList.clusterProperty=audit.auditDetailExcludeList
 audit.auditDetailExcludeList.visible=false
+
+httpDigest.enable.description=Enable storage of digest password compatible with HTTP Digest
+httpDigest.enable.clusterProperty=httpDigest.enable
+httpDigest.enable.default=false
+httpDigest.enable.visible=false
