The "Import Certificate" dialog now allows you to select an existing trusted cert entry or private key entry's subject cert chain, as long as the SSM is currently connected to a Gateway.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28137 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/CertificateDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/CertificateDialog.properties
@@ -83,6 +83,9 @@ view.error.pem.cert.decode=Decode error! Please make sure the certificate conten
 view.error.pem.cert.content=The certificate content (Base64 PEM) is empty.
 view.error.cert.generate=Error! Unable to generate X.509 Certificate:
 view.error.close.InputStream=Internal error! Unable to close the input stream beging opened.
+view.error.privatekey.noneselected=No private key selected.
+view.error.privatekey.bad=Unable to load subject certificate for selected private key.
+view.error.trustedcert.nonselected=No trusted certificate selected.
 
 ## Save, Update or Delete
 cert.expired.error=<html>That certificate is expired. It has not been saved.</html>
