SSG-4628: JdbcConnection now supports use of a ${secpass} reference in place of a plaintext password.  The GUI will gently guide you toward using such a reference instead of entering a plaintext password.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28179 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/resources/JdbcConnectionPropertiesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/resources/JdbcConnectionPropertiesDialog.properties
@@ -45,4 +45,5 @@ confirmation.remove.additional.property=Are you sure you want to remove the addi
 
 message.testing.jdbc.conn.passed=JDBC connection testing passed.
 message.testing.jdbc.conn.failed=Testing failed: {0}
+label.showPassword=Show Password
 
