SSG-4630: Email listeners now allow the password to be specified as a ${secpass} reference.  The properties GUI will now guide the user toward using such references instead of plaintext passwords.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28187 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/EmailListenerPropertiesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/EmailListenerPropertiesDialog.properties
@@ -35,3 +35,4 @@ okButton.text=&OK
 cancelButton.text=Cance&l
 testButton.text=Test
 browseButton.text=&Browse
+settings.showPasswordCheckBox.label=Show Password
