bug 10092: The LDAP identity provider now provides the option of using a ${secpass.FOO.plaintext} reference for its bind password, and the config GUI now guides users towards making use of that options.
The LdapIdentityProviderConfigPanel is no longer totally GridBagged.

git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28193 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/IdentityProviderDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/IdentityProviderDialog.properties
@@ -22,30 +22,30 @@ whether LDAP users can be added to a role in the "Manage Roles" task.</p>\
 
 #######
 # components
-providerNameTextField.label=Provider Name:*
+providerNameTextField.label=Provider &Name:*
 providerNameTextField.mnemonic=I
 providerNameTextField.tooltip=Enter provider's name
 providerNameTextField.length.error=Provider name must be between 1 and 128 characters in length.
 providerNameTextField.error.title=Warning
 
-providerTypeTextField.label=Provider Type:
+providerTypeTextField.label=Provider &Type:
 providerTypeTextField.mnemonic=T
 providerTypeTextField.tooltip=Select provider type
 
 # ldap
-ldapHostTextField.label= LDAP Host URL:*
+ldapHostTextField.label= LDAP Host &URL:*
 ldapHostTextField.tooltip=Enter LDAP host URL (ldap://host:port)
 
-ldapSearchBaseTextField.label= Search Base:*
+ldapSearchBaseTextField.label= Search &Base:*
 ldapSearchBaseTextField.tooltip= Search base DN (ou=People,o=acme.com)
 
-ldapBindDNTextField.label=Bind DN:
+ldapBindDNTextField.label=Bind &DN:
 ldapBindDNTextField.tooltip=Enter LDAP binding DN (cn=Manager)
 
 ldapBindPassTextField.label=Bind Password:
 ldapBindPassTextField.tooltip=Enter LDAP binding password (secret)
 
-ldapAdminEnabledCheckbox.text = Allow assignment to administrative roles
+ldapAdminEnabledCheckbox.text = &Allow assignment to administrative &roles
 ldapAdminEnabledCheckbox.tooltip = If checked, users in this Identity Provider are eligible to be assigned to administrative roles
 
 testLdapButton.label= Test
@@ -127,7 +127,7 @@ importUsersGroups.step.importUsersCheckbox=Import Users
 importUsersGroups.step.importGroupsCheckbox=Import Groups
 importUsersGroups.step.description=Import users/groups into the imported Federated Identity Provider.
 
-useClientAuthenticationCheckbox.text=Use Client Authentication
+useClientAuthenticationCheckbox.text=Use &Client Certificate Authentication:
 useClientAuthenticationCheckbox.tooltip=Specify the key to be used when connecting to an LDAP server using ldaps connections.
 
 advancedConfiguration.step.label=Advanced Configuration
@@ -148,4 +148,10 @@ advancedConfiguration.attrs.edit.title=Edit Attribute
 advancedConfiguration.attrs.prompt=Attribute:
 advancedConfiguration.group.caseInsensitiveMembership=&Use case insensitive group membership check
 advancedConfiguration.max.cache.age.error=Cache maximum age should not exceed 100 years.
+upButton.label=Move &Up
+downButton.label=Move &Down
+addButton.label=&Add
+editButton.label=&Edit
+removeButton.label=Re&move
+showPasswordButton.label=Show Password
 
