SSM-3261: Fix for GAME: Validation of minimum values is incorrect
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28203 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/AdminUserAccountPropertiesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/AdminUserAccountPropertiesDialog.properties
@@ -5,6 +5,5 @@ lockout.label =Minimum Lockout Duration:
 expiry.label =Gateway Session Expiry:
 inactivity.label =Maximum Inactivity Period:
 maxattempts.label =Maximum Invalid Logon Attempts:
-below.stig.warning=Requirements are below STIG minimum
-below.pcidss.warning=Requirements are below PCI-DSS minimum
+below.warning=Requirements are below {0} minimum
 
