--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/IdProviderPasswordPolicyDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/IdProviderPasswordPolicyDialog.properties
@@ -29,5 +29,4 @@ expiry.error=Password expiry must be greater then 0.
 password.max.length.error=Maximum password length must be greater then 0.
 minimum.characters.error=Password character requirements exceed the minimum password length
 
-below.stig.warning=Requirements are below STIG minimum
-below.pcidss.warning=Requirements are below PCI-DSS minimum
+below.warning=Requirements are below {0} minimum
