SSM-3247: fixed by updating the description of "audit.auditDetailExcludeList" to remove confusion with use of the word 'Set' as it was used in the mathematical sense and not as a verb.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28240 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1420,7 +1420,7 @@ audit.setDetailLevel.FINEST.description=Set the audit detail level for all liste
 audit.setDetailLevel.FINEST.clusterProperty=audit.setDetailLevel.FINEST
 audit.setDetailLevel.FINEST.visible=false
 
-audit.auditDetailExcludeList.description=Set of audit detail messages never to audit. Space separated list.
+audit.auditDetailExcludeList.description=The audit detail messages never to audit. Space separated list.
 audit.auditDetailExcludeList.clusterProperty=audit.auditDetailExcludeList
 audit.auditDetailExcludeList.visible=false
 
