--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -975,6 +975,13 @@ keyStoreAuditViewerKey.systemProperty = ${propertyPrefix}.keyStore.auditViewer.a
 keyStoreAuditViewerKey.setSystemProperty = false
 keyStoreAuditViewerKey.visible = false
 
+keyStoreAuditSigningKey.description = Keystore ID and alias of default audit signing key, colon delimited.  A keystore ID of -1 means "unspecified".
+keyStoreAuditSigningKey.default = ${keyStoreDefaultSslKey}
+keyStoreAuditSigningKey.clusterProperty = keyStore.auditSigning.alias
+keyStoreAuditSigningKey.systemProperty = ${propertyPrefix}.keyStore.auditSigning.alias
+keyStoreAuditSigningKey.setSystemProperty = false
+keyStoreAuditSigningKey.visible = false
+
 keyStoreSearchForAlias.description = If a key alias isn't found in the expected keystore, search all other keystores as well (true/false)
 keyStoreSearchForAlias.default = true
 keyStoreSearchForAlias.clusterProperty = keyStore.searchForAlias
